# llamasearch

./: .coverage  .dockerignore  .flake8  .gitignore  CMakeLists.txt  README.md  app.py  changes.md  environment.yml  example.txt  integration.txt  llamasearch.md  logs.txt  pyproject.toml  pyrightconfig.json  pytest.txt  setup.py  setup_config.json  test_query.py  test_trustworthiness.py  trustworthiness.py  windows-cuda-installer.bat
.devcontainer/: Dockerfile  README.md  devcontainer.json  startup.sh
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.yml  user-story.yml
.github/workflows/: ci.yml
data/: documents_knowledge_graph.json
debug/: jina_response_.html  jina_response_directory_fsf_org.html  jina_response_fsf_org.html  jina_response_gnu_org.html  jina_response_my_fsf_org.html  jina_response_weblabels_fsf_org.html  scraping_response_artanis_dev.html  scraping_response_creativecommons_org.html  scraping_response_gnu_org.html  scraping_response_w3_org.html
docs/: project-overview.md
docs/ADRs/: 001-initial-architecture.md  002-architecture-refinement.md  003-trustworthiness-score-architecture.md
docs/sprints/: sprint-001.md  sprint-002.md
llamasearch/: __init__.py  __main__.py  main.py  setup_utils.py  utils.py
llamasearch/core/: README.md  apiauth.py  bm25.py  chunker.py  crawler.py  embedder.py  embedding.py  embedding_pca.py  extractor.py  grapher.py  knowledge_graph.py  llm.py  llm_cpu.py  pcrawler.py  resource_manager.py  teapotai.py  vectordb.py
llamasearch/tests/: test_crawler.py  test_extractor.py
llamasearch/trustworthiness/: convert.py  linkChecker.py  links.md  score.py  trustedSources.py  trustworthinessScore.py
llamasearch/ui/: app.py  utils.py
pantheon/: auth-fandom-com-wiki-Cary_Duvall.md  fandom-com-community-fandom-com-wiki-Community_Central.md  fandom-com-terms-of-use.md  fandom-com-topics-games.md  links.txt  pantheon-amc-fandom-com-wiki-Ellen_Kim.md  pantheon-amc-fandom-com-wiki-Maddie_Kim.md  support-twitter-com-articles-20170514.md
src/llamasearch/: __init__.py  __main__.py  data_manager.py  exceptions.py  hardware.py  protocols.py  setup.py  setup_utils.py  utils.py
src/llamasearch/core/: bm25.py  chunker.py  crawler.py  embedder.py  extractor.py  grapher.py  llm.py  llm_combined.py  llm_cpu.py  llmsearch.py  onnx_model.py  pcrawler.py  query_processor.py  resource_manager.py  search_engine.py  source_manager.py  teapot.py  teapotai.py  vectordb.py
src/llamasearch/trustworthiness/: authorSearch.py  convert.py  links.md  score.py  trustedSources.py  trustworthinessScore.py
src/llamasearch/ui/: app.py  app_logic.py  components.py  main.py  qt_logging.py  utils.py
src/llamasearch/ui/views/: crawl_view.py  search_view.py  settings_view.py  terminal_view.py
temp/: extracted_text.txt  extracted_texts.md  extracted_texts.txt  links.md  links.txt
tests/: .coverage  __init__.py  test_app_logic.py  test_author_detection.py  test_backend_utils.py  test_bm25.py  test_chunker.py  test_core_crawler.py  test_core_extractor.py  test_core_utils.py  test_crawler.py  test_data_manager.py  test_embedder.py  test_hardware.py  test_integration.py  test_main.py  test_onnx_model.py  test_query_processor.py  test_search_engine.py  test_setup.py  test_source_manager.py  test_teapot.py  test_trustworthiness_authorSearch.py  test_trustworthiness_linkChecker.py  test_trustworthiness_score.py  test_trustworthiness_trustworthinessScore.py  test_ui_app.py  test_ui_components.py  test_ui_main.py  test_utils.py
tests/core/: test_app_logic.py  test_bm25.py  test_data_manager.py  test_setup.py
tests/ui/: test_ui_components.py
vector_db/: documents_embeddings.npy  documents_meta.json
