[project]
name = "llamasearch"
version = "0.1.0"
description = "RAG-based search application"
requires-python = ">=3.10"
authors = [
    { name = "Leo Angulo", email = "langulo@gmu.edu" },
    { name = "Georgi Zahariev", email = "gzaharie@gmu.edu" },
    { name = "Robin Hwang",   email = "rhwang4@gmu.edu" },
    { name = "Mithran Mohanraj", email = "mithran.mohanraj@gmail.com" },
    { name = "Dhanush Reddy Kandukuri", email = "kandukuri.dhanush@gmail.com" },
    { name = "Shaheda Tawakalyar", email = "stawakal@gmu.edu" },
    { name = "Malek Bashagha", email = "abashagh@gmu.edu" }
]
dependencies = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "flake8>=7.1.2",
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.3",
    "black>=25.1.0",
    "gradio>=5.18.0",
    "gTTS>=2.5.4",
    "chromadb>=0.6.3",
    "transformers>=4.50.3",
    "sentence-transformers>=4.0.1",
    "sentencepiece>=0.2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.scikit-build]
# This block is used by scikit-build-core
# We do not explicitly set -DCMAKE_CUDA_ARCHITECTURES=all-major here anymore
cmake.minimum-version = "3.26"
cmake.args = []
cmake.build-type = "Release"
cmake.verbose = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -v --cov=llamasearch --cov-report=term-missing"
log_cli = true
log_cli_level = "INFO"