[project]
name = "llamasearch"
version = "0.1.0"
description = "RAG-based search application"
requires-python = ">=3.11"
authors = [
    { name = "Leo Angulo", email = "langulo@gmu.edu" },
    { name = "Georgi Zahariev", email = "gzaharie@gmu.edu" },
    { name = "Robin Hwang",   email = "rhwang4@gmu.edu" },
    { name = "Mithran Mohanraj", email = "mithran.mohanraj@gmail.com" },
    { name = "Dhanush Reddy Kandukuri", email = "kandukuri.dhanush@gmail.com" },
    { name = "Shaheda Tawakalyar", email = "stawakal@gmu.edu" },
    { name = "Malek Bashagha", email = "abashagh@gmu.edu" }
]
dependencies = [
    "torch",
    "transformers",
    "sentence-transformers",
    "markdown",
    "beautifulsoup4",
    "colorama",
    "scikit-learn",
    "numpy",
    "huggingface_hub",
    "streamlit",
    "requests",
    "pydantic",
    "rank-bm25",
    "spacy>=3.0.0",
    "tqdm",
    "psutil",
    "cryptography",
    "accelerate",
    "langsmith",
    "PySide6",
    "PyJWT>=2.8.0",
    "sentencepiece>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.22",
    "ninja>=1.11",
    "scikit-build>=0.17.6"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["llamasearch"]

[project.scripts]
llamasearch-setup = "llamasearch.setup_utils:run_setup_command"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -v --cov=llamasearch --cov-report=term-missing"
log_cli = true
log_cli_level = "INFO"