[project]
name = "llamasearch"
version = "0.1.0"
description = "RAG-based search application"
requires-python = ">=3.11"
authors = [
    { name = "Mithran Mohanraj", email = "mithran.mohanraj@gmail.com" },
    { name = "Georgi Zahariev", email = "gzaharie@gmu.edu" },
    { name = "Leo Angulo", email = "langulo@gmu.edu" },
    { name = "Robin Hwang",   email = "rhwang4@gmu.edu" },
    { name = "Dhanush Reddy Kandukuri", email = "kandukuri.dhanush@gmail.com" },
    { name = "Shaheda Tawakalyar", email = "stawakal@gmu.edu" },
    { name = "Malek Bashagha", email = "abashagh@gmu.edu" }
]
dependencies = [
    "torch",
    "transformers",
    "sentence-transformers",
    "markdown",
    "beautifulsoup4",
    "colorama",
    "scikit-learn",
    "numpy",
    "huggingface_hub",
    "streamlit",
    "requests",
    "pydantic",
    "tqdm",
    "psutil",
    "cryptography",
    "accelerate",
    "langsmith",
    "protobuf",
    "PyJWT>=2.8.0",
    "sentencepiece>=0.2.0",
    "crawl4ai",
    "optimum[onnxruntime]>=1.21.0",
    "py-cpuinfo>=9.0.0",
    "onnxruntime>=1.18.0",
    "filelock>=3.12.0",
    "langchain-text-splitters",
    "Whoosh",
    "chromadb",
    "PySide6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.22",
    "ninja>=1.11",
    "scikit-build>=0.17.6"
]
build-backend = "setuptools.build_meta"

[project.scripts]
llamasearch = "llamasearch.__main__:main"
llamasearch-setup = "llamasearch.setup:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["llamasearch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -v --cov=llamasearch --cov-report=term-missing"
log_cli = true
log_cli_level = "INFO"

[tool.vibelint]
include_globs = [
    "src/**/*.py",
    "tests/**/*.py",
    "pyroject.toml",
]